# HIMLocoWithDeploy

./: .gitignore
deploy_cpp/: CMakeLists.txt  README.md  package.xml
deploy_cpp/config/robots/: mybot.yaml  mybot_v2.yaml  mybot_v2_real.yaml  mybot_v2_sim.yaml
deploy_cpp/include/: imu_subscriber.h  keyboard_controller.h  motor_driver.h  policy_runner.h  robot_config.h  robot_runtime_config.h  robot_visualizer.h  state_machine.h
deploy_cpp/launch/: deploy.launch  deploy.launch.py  motor_debug.launch  motor_debug.launch.py  sim.launch  sim.launch.py  visualize.launch  visualize.launch.py
deploy_cpp/policy/: policy.pt
deploy_cpp/robot/mybot_v2/urdf/: mybot_v2.urdf
deploy_cpp/sim/: mujoco_sim_node.py
deploy_cpp/src/: deploy_node.cpp  imu_subscriber.cpp  keyboard_controller.cpp  motor_debug_node.cpp  motor_driver.cpp  policy_runner.cpp  robot_runtime_config.cpp  robot_visualizer.cpp  state_machine.cpp
legged_gym/legged_gym/envs/: __init__.py
legged_gym/legged_gym/envs/base/: legged_robot.py
legged_gym/legged_gym/envs/mybot_v2/: mybot_v2_config.py
