<?xml version="1.0"?>
<package format="2">
  <name>deploy_cpp</name>
  <version>1.0.0</version>
  <description>C++ deployment node for Mybot quadruped robot with HIM locomotion policy</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
